# AoC2018-Haskell

./: AdventOfCode2018.cabal  stack.yaml
.stack-work/install/x86_64-linux/lts-12.20/8.4.4/flag-cache/: AdventOfCode2018-0.1.0.0-2B3PxuC9GfR8Haca9SX58N  AdventOfCode2018-0.1.0.0-5yochTKcNB2IgkuzUv0TYU  AdventOfCode2018-0.1.0.0-8WHTvobEHZxB02Peic6ZbW  AdventOfCode2018-0.1.0.0-8hwde8wOg7jCY21fPvUM1Q  AdventOfCode2018-0.1.0.0-9mz4oXKSt6hLRHT4l0gSYF  AdventOfCode2018-0.1.0.0-BM9I2sKiz9N1fY81xz3kOx  AdventOfCode2018-0.1.0.0-EYAjxgexg2HJmOXuDrZ95e  AdventOfCode2018-0.1.0.0-Fwzl3oKBKytIAt78eTmVgH  AdventOfCode2018-0.1.0.0-HBrDMRrSLq3Fp3Ak6RhnM5  AdventOfCode2018-0.1.0.0-HFYCf4vmQs2IeKvQ6yxdR2  AdventOfCode2018-0.1.0.0-HkadU7rmFU01V4TemrKq77  AdventOfCode2018-0.1.0.0-Krgv0rbpzUIac5J6t3Jc8  AdventOfCode2018-0.1.0.0-L0nDd1WU5JnBrFGo7tGsI0  StateVar-1.1.1.1-95mVnsqAWWrCsY5lrWtwY9  adjunctions-4.4-5fhhSQn5oSBrWGkxUgTjp  base-orphans-0.7-85wcea2rRmdArILlfYz5fz  base-prelude-1.3-6USA4MwBClb3KaEhnb0gD7  bifunctors-5.5.3-AM7H0xeEvfREBiLMSjdaGc  bytes-0.15.5-HRdyMVVk7Ad42n51i6Jw4s  cabal-doctest-1.0.6-E57gwmEN5fa2uY0bq8bb44  call-stack-0.1.0-Eiz5FM8yQXpI3vyQ1Rt4Jq  case-insensitive-1.2.0.11-CPrTOvzDNbeGLOzZAUTjaA  cereal-0.5.7.0-ILaYAmVTyR1IcEsGXXUCfI  clock-0.7.2-Cf9UTsaN2AjEpBnoMpmgkU  comonad-5.0.4-icnTpCYoez8bYOrlJ9Cxm  (+38 more)
Exercises/: 10Day.hs  11Day.hs  11Day2.hs  11DayS.hs  12Day.hs  12DayB.hs  13Day.hs  13DayInput.txt  13DayInputT2.txt  1Day.hs  2Day.hs  3Day.hs  4Day.hs  5Day.hs  6Day.hs  6Day2.hs  7Day.hs  7DayS.hs  8Day.hs  9Day.hs  9DayFast.hs  9DayFastest.hs
(+12 files in other folders)
