name:                AdventOfCode2018
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/AdventOfCode2018#readme
license:             BSD3
license-file:        LICENSE
author:              Saaffa
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:     Exercises
  build-depends:      base >= 4.7 && < 5
                    , containers
                    , array
                    , deepseq
                    , linear
                    , megaparsec
                    , counter
                    , split
                    , unordered-containers
                    , pointedlist
                    , vector
                    , extra
                    -- , dlist
                    -- , mtl
                    -- , text
                    -- , transformers
  default-language:   Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
